# MCP

./: main.ipynb  main.py  pyproject.toml
cst_python_api/: Boolean.py  Build.py  CST_API_SERVER.py  CST_MicrowaveStudio.py  CheckParam.py  Component.py  Material.py  Parameter.py  Port.py  Project.py  Results.py  Shape.py  Solver.py  Transform.py  __init__.py  farfield.py  feed.py
cst_python_api/analysis/: __init__.py  farfield.py
cst_python_api/assemblies/: __init__.py  feed.py
