[project]
name = "1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "cst-python-api",
    "gradio>=5.49.0",
    "ipykernel>=6.30.1",
    "mcp[cli]>=1.16.0",
    "openai-agents>=0.3.3",
]

[tool.uv.sources]
cst-python-api = { path = "../../../cst_api_hermes/cst_api_hermes/cst-python-api" }
